# opendw_dragon_wars_cht

./: .dockerignore  .gitignore  CMakeLists.txt  CONTEXT.md  Dockerfile  README.md  SKILL.md  docker-compose.yml
cmake/: FindCheck.cmake
docs/: 00_DOC_AUDIT.md  01_PLAN.md  03_REVIEW_REPORT.md  04_NEXT_PLAN.md  05_SDL2_IMPLEMENTATION.md  05_VERIFICATION_REPORT.md  06_IMPLEMENTATION_PLAN.md  07_REVISED_PLAN.md  08_READ_PARAGRAPH_FEATURE.md  10_TRANSLATION.md  11_TRANSLATION_DIALOGUE.md  12_TRANSLATION_ITEMS.md  13_TRANSLATION_SKILLS.md  14_TRANSLATION_MONSTERS.md  15_TRANSLATION_DRAFT.md  21_DATA1_RESOURCE_INDEX.md  22_DATA1_SECTION_DETAILS.md  24_SCRIPT_TEXT_MAPPING.md  25_OPCODE_INTERPRETATION.md  26_MONSTERS_AND_SPRITES.md  31_CHINESE_MANUAL_TEXT.md  32_EN_MANUAL_TEXT.md  33_MANUAL_TRANSCRIPTION.md  34_READ_PARAGRAPHS.md  35_SOFTWORLD_25.md  36_SOFTWORLD_26.md  37_SOFTWORLD_27.md  38_SOFTWORLD_WALKTHROUGH.md  39_SOFTWORLD_FULLTEXT_AND_MAPS.md  40_ORIGINAL_DOCS_SUMMARY.md  42_COMBAT_BYTECODE.md  42_WHY_DATA1_DATA2.md  51_TEST_PLAN.md  60_SKILL.md  99_INDEX.md  ALL_TEXT_FROM_SCRIPTS.txt  ANALYSIS.md  BUILD.md  CHINESE_MANUAL_INDEX.md  CHINESE_MANUAL_TEXT.md  (+24 more)
opendw_remake/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
opendw_remake/assets/bundle/: README.md  manifest.json
opendw_remake/assets/bundle/maps/: 0.lvl  1.lvl  10.lvl  11.lvl  12.lvl  13.lvl  14.lvl  15.lvl  16.lvl  17.lvl  18.lvl  19.lvl  2.lvl  20.lvl  21.lvl  22.lvl  23.lvl  24.lvl  25.lvl  26.lvl  27.lvl  28.lvl  29.lvl  3.lvl  30.lvl  31.lvl  32.lvl  33.lvl  34.lvl  35.lvl  36.lvl  37.lvl  38.lvl  39.lvl  4.lvl  5.lvl  6.lvl  7.lvl  8.lvl  9.lvl  (+1 more)
opendw_remake/assets/bundle/maps/golden/: 1.f0.10_10.golden  1.f0.10_10.sel.golden  1.f0.10_10.vpmem  1.f1.10_10.golden  1.f1.10_10.sel.golden  1.f1.10_10.vpmem  1.f2.15_12.golden  1.f2.15_12.sel.golden  1.f2.15_12.vpmem  1.f3.8_20.golden  1.f3.8_20.sel.golden  1.f3.8_20.vpmem
opendw_remake/assets/bundle/maps/golden_sweep/: 0.f0.12_19.vpmem  0.f1.12_19.vpmem  0.f2.12_19.vpmem  0.f3.12_19.vpmem  1.f0.1_1.vpmem  1.f1.1_1.vpmem  1.f2.1_1.vpmem  1.f3.1_1.vpmem  10.f0.0_0.vpmem  10.f1.0_0.vpmem  11.f0.0_1.vpmem  11.f2.0_1.vpmem  11.f3.0_1.vpmem  12.f0.0_0.vpmem  12.f1.0_0.vpmem  12.f3.0_0.vpmem  13.f0.0_2.vpmem  14.f0.14_7.vpmem  14.f1.14_7.vpmem  14.f2.14_7.vpmem  14.f3.14_7.vpmem  15.f0.4_0.vpmem  15.f1.4_0.vpmem  15.f2.4_0.vpmem  15.f3.4_0.vpmem  16.f0.4_0.vpmem  16.f1.4_0.vpmem  16.f3.4_0.vpmem  17.f0.11_10.vpmem  17.f1.11_10.vpmem  17.f2.11_10.vpmem  17.f3.11_10.vpmem  18.f0.10_8.vpmem  18.f1.10_8.vpmem  18.f2.10_8.vpmem  18.f3.10_8.vpmem  19.f0.11_5.vpmem  19.f1.11_5.vpmem  19.f2.11_5.vpmem  19.f3.11_5.vpmem  (+87 more)
opendw_remake/assets/bundle/monsters/: manifest.json
opendw_remake/assets/bundle/paragraphs/zh-TW/: paragraphs.tsv
opendw_remake/assets/bundle/scenes/: 24.pic  25.pic  26.pic  27.pic  28.pic  29.pic
opendw_remake/assets/bundle/sprites/: 152_guard.spr  168_wolf.spr  196_spider.spr  200_innocent_man.spr  210_pikeman.spr  222_fanatic.spr  manifest.json
opendw_remake/assets/bundle/sprites/golden/: 168_wolf.viewport.ppm  196_spider.viewport.ppm
opendw_remake/assets/bundle/strings/: 0.tsv  3.tsv  6.tsv
opendw_remake/assets/bundle/viewport/: README.md  data6820.bin.vpmem  vp0.bin.vpmem  vp2.bin.vpmem
opendw_remake/assets/fonts/: cjk24.atlas
opendw_remake/assets/i18n/en/: chars.tsv  combat.tsv  menu.tsv
opendw_remake/assets/i18n/ja/: chars.tsv  combat.tsv  menu.tsv
opendw_remake/assets/i18n/zh-TW/: chars.tsv  combat.tsv  events.tsv  menu.tsv
opendw_remake/docs/: CONTROLS.md  REWRITE_READINESS.md  VIEWPORT.md  VIEWPORT_COMPOSE.md
opendw_remake/docs/adr/: 0002-two-layer-cjk-rendering.md
opendw_remake/docs/party_demo/: README.md
opendw_remake/src/: main.cpp
opendw_remake/src/game/: combat.cpp  combat.hpp  party.cpp  party.hpp  party_panel.cpp  savegame.cpp  savegame.hpp
opendw_remake/src/i18n/: string_table.cpp  string_table.hpp  strings.cpp  strings.hpp
opendw_remake/src/render/: cjk_font.cpp  cjk_font.hpp  font.cpp  font.hpp  framebuffer.hpp  picture.cpp  picture.hpp  sdl_video.cpp  sdl_video.hpp  sprite.cpp  sprite.hpp  text_layer.cpp  text_layer.hpp  viewport.cpp  viewport.hpp  viewport_compose.cpp  viewport_compose.hpp  viewport_tables.hpp
opendw_remake/src/resource/: archive.cpp  archive.hpp  decompress.cpp  decompress.hpp  level.cpp  level.hpp  paragraphs.cpp  paragraphs.hpp  provider.cpp  provider.hpp  text_codec.cpp  text_codec.hpp
opendw_remake/src/vm/: interpreter.cpp  interpreter.hpp  trace.hpp  vm_state.hpp
opendw_remake/tests/: vm_selftest.cpp
opendw_remake/tools/extract/: build_paragraph_bundle.py  extract_components.cpp  extract_eventscripts.cpp  extract_level.cpp  extract_monsters.cpp  extract_scene.cpp  extract_strings.cpp  level_events.cpp
opendw_remake/tools/scratch/: oracle_readpara.c  ppm2png.py  trace_readpara.cpp
opendw_remake/tools/verify/: probe_areaswitch.cpp  probe_combat_script.cpp  render_cjk_demo.cpp  render_menu_bundle.cpp  render_menu_demo.cpp  render_sprite_bundle.cpp  render_text.cpp  render_title.cpp  render_vm_text.cpp  smoke_test.sh  trace_remake.cpp  verify_areaswitch.cpp  verify_combat.cpp  verify_combat_script.cpp  verify_compose.cpp  verify_decompress.cpp  verify_encounter_golden.cpp  verify_fov.cpp  verify_fp.cpp  verify_fp_sweep.cpp  verify_i18n.cpp  verify_op58.cpp  verify_party_panel.cpp  verify_provider.cpp  verify_r0.cpp  verify_save.cpp  verify_viewport.cpp
skills/: opendw-chinese-localization.md
src/: CMakeLists.txt
src/fe/: CMakeLists.txt
src/lib/: CMakeLists.txt  engine.c  engine.h  mouse.c  mouse.h  ui.c  ui.h
src/tests/: CMakeLists.txt  test_cjk.cpp  test_opendw.cpp  test_translation.cpp
tools_build/: Dockerfile.dwtools  build_bundle.sh  build_opendw_tools.sh  build_paragraphs.py  build_tools.sh  build_trace_oracle.sh  build_trace_oracle_batch10.sh  cjk_render_proto.py  diff_trace.sh  extract_sprite.py  gen_cjk_atlas.py  render_golden.sh  resource_data2.patch  scene_localize.py  scene_render.py  sprite_dump.cpp  trace_harness.cpp  verify_scene_golden.sh
(+21 files in other folders)
